Adding a first paragraph

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Ixchel Mercado's page</title>
+    </head>
+    <body>
+        <h1>Hi! I'm Ixchel Mercado. An Embedded software developer</h1>
+        <p> I'm building this website to show a little of my web developing skills and also as my resume</p>
+    </body>
+
+</html>
+
